k8s/service-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: ghcr.io/maximeboulle/st2scl-project/service-b:latest
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
  selector:
    app: service-b
